# bridge-sdk-rs

./: .gitignore  Cargo.toml
bridge-cli/: Cargo.toml
bridge-cli/src/: defaults.rs  fee.rs  main.rs  omni_connector_command.rs  poc_solana.rs
bridge-sdk/bridge-clients/evm-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/evm-bridge-client/src/: evm_bridge_client.rs
bridge-sdk/bridge-clients/near-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/near-bridge-client/src/: btc.rs  near_bridge_client.rs
bridge-sdk/bridge-clients/solana-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/solana-bridge-client/src/: solana_bridge_client.rs
bridge-sdk/bridge-clients/solana-optimistic-poc-client/: Cargo.toml
bridge-sdk/bridge-clients/solana-optimistic-poc-client/src/: lib.rs
bridge-sdk/bridge-clients/utxo-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/utxo-bridge-client/src/: utxo_bridge_client.rs
bridge-sdk/connectors/bridge-connector-common/: Cargo.toml
bridge-sdk/connectors/bridge-connector-common/src/: result.rs
bridge-sdk/connectors/omni-connector/: Cargo.toml
bridge-sdk/connectors/omni-connector/src/: omni_connector.rs  zcash.rs
bridge-sdk/eth-proof/: Cargo.toml
bridge-sdk/light-client/: Cargo.toml
bridge-sdk/utxo-utils/: Cargo.toml
bridge-sdk/utxo-utils/src/: lib.rs
