[workspace]
resolver = "2"
members = [
    "bridge-cli",
    "bridge-sdk/eth-proof",
    "bridge-sdk/near-rpc-client",
    "bridge-sdk/bridge-clients/solana-bridge-client",
    "bridge-sdk/bridge-clients/solana-optimistic-poc-client",
    "bridge-sdk/bridge-clients/near-bridge-client",
    "bridge-sdk/bridge-clients/evm-bridge-client",
    "bridge-sdk/bridge-clients/wormhole-bridge-client",
    "bridge-sdk/bridge-clients/utxo-bridge-client",
    "bridge-sdk/crypto-utils",
    "bridge-sdk/utxo-utils",
    "bridge-sdk/light-client"
]

[workspace.dependencies]
sha3 = "0.10.8"
sha2 = "0.10.8"
bitcoincore-rpc = "0.19.0"
bitcoin = { version = "0.32.5", features = ["serde"] }
borsh = "1.5.1"
thiserror = "2.0.3"
ethers = "2.0.14"
ethers-core = "2.0.14"
ethereum-types = "0.14.1"
tokio = { version = "1.38.0", features = ["full"]}
serde = { version = "1.0" }
hex = "0.4.3"
serde_json = "1.0.117"
reqwest = { version = "0.12", features = ["json"] }
cita_trie = "5.0.1"
rlp = "0.5.2"
hasher = "0.1.4"
lazy_static = "1.4.0"
merkle-tools = { git = "https://github.com/Near-One/btc-light-client-contract", tag = "v0.2.0" }
minreq = { version = "2.12.0", features = ["https"] }
near-jsonrpc-client = "0.20.0"
near-jsonrpc-primitives = "0.34.2"
near-primitives = "0.34.2"
near-crypto = "0.34.2"
near-sdk = "5.22.0"
derive_builder = "0.20.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = { version = "0.15" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
near-token = "0.3"
near-contract-standards = "5.5"
omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types", rev = "57572b3fe5db1ab29857005703a3ea89fed97fa5" }
serde_with = "3.12.0"
solana-sdk = "2.0.13"
solana-client = "2.0.13"
solana-system-interface = "1.0.0"
solana-transaction-status-client-types = "2.3.6"
spl-token = "7.0.0"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = "5.1.0"
crypto-shared = { git = "https://github.com/near-one/mpc", package = "crypto-shared", rev = "463172481597ee09b12020b72c61d6b01da7b167" }
openssl-sys = { version = "*", features = ["vendored"] }
light-client =  { path = "bridge-sdk/light-client" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
