[package]
name = "eth-proof"
version = "0.2.2"
edition = "2021"

[dependencies]
borsh.workspace = true
thiserror.workspace = true
tokio.workspace = true
ethereum-types.workspace = true
serde.workspace = true
hex.workspace = true
serde_json.workspace = true
reqwest.workspace = true
cita_trie.workspace = true
rlp.workspace = true
hasher.workspace = true
omni-types.workspace = true
