[package]
name = "utxo-utils"
version = "0.2.1"
edition = "2021"

[dependencies]
bitcoin.workspace = true
omni-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
near-sdk.workspace = true
zcash_address.workspace = true
zcash_protocol.workspace = true
k256 = "0.13.1"
orchard.workspace = true
