[package]
name = "evm-bridge-client"
version = "0.3.3"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
sha3.workspace = true
borsh.workspace = true
alloy.workspace = true
ethereum-types.workspace = true
derive_builder.workspace = true
hex.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
near-token.workspace = true
omni-types.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
eth-proof = { path = "../../eth-proof" }
near-rpc-client = { path = "../../near-rpc-client" }

[lib]
path = "src/evm_bridge_client.rs"
