[package]
name = "solana-bridge-client"
version = "0.2.8"
edition = "2021"

[dependencies]
derive_builder.workspace = true
borsh.workspace = true
bitvec = "1.0.1"
base64.workspace = true
sha2.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true
solana-transaction-status-client-types.workspace = true
mpl-token-metadata.workspace = true
spl-token.workspace = true
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
thiserror.workspace = true
openssl-sys.workspace = true

[lib]
path = "src/solana_bridge_client.rs"
