[package]
name = "utxo-bridge-client"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc.workspace = true
bitcoin.workspace = true
hex.workspace = true
merkle-tools.workspace = true
minreq.workspace = true
near-crypto.workspace = true
near-rpc-client = { path = "../../near-rpc-client" }
near-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
zebra-chain = "2.0.0"

[lib]
path = "src/utxo_bridge_client.rs"
